# RegulationSearchEngine

./: .env  .gitignore  Local LLM Streamlit_app.py  Local LLM.py  README.md  dockerfile  final.md  pyproject.toml  requirements.txt  scrapper.py  streamlit_app.py
